Bug 446926 - Dolphin crashed after click on stop button of notification indicating the progress of compression to zip archive
Summary: Dolphin crashed after click on stop button of notification indicating the pro...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: drkonqi
: 446927 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-13 12:12 UTC by Patrick Silva
Modified: 2022-03-07 00:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-12-13 12:12:51 UTC
Application: dolphin (22.03.70)

Qt Version: 5.15.3
Frameworks Version: 5.89.0
Operating System: Linux 5.11.0-40-generic x86_64
Windowing System: Wayland
Distribution: KDE neon Unstable Edition
DrKonqi: 5.23.80 [CoredumpBackend]

-- Information about the crash:
- What I was doing when the application crashed:
compress a big file to zip format via context menu of Dolphin, abort the compression by clicking on stop button of Plasma notification.
Result: Dolphin freezes for ~45 seconds and then crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = 0x0}
[New LWP 14814]
[New LWP 8997]
[New LWP 8967]
[New LWP 8968]
[New LWP 8969]
[New LWP 8971]
[New LWP 8972]
[New LWP 8970]
[New LWP 8973]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Core was generated by `/usr/bin/dolphin'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  __GI_raise (sig=sig@entry=11) at ../sysdeps/unix/sysv/linux/raise.c:50
[Current thread is 1 (Thread 0x7feb49ffb700 (LWP 14814))]
__preamble__

[Current thread is 1 (Thread 0x7feb49ffb700 (LWP 14814))]

Thread 9 (Thread 0x7feb527fc700 (LWP 8973)):
#0  0x00007feb610ccaff in __GI___poll (fds=0x7feb34004e60, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007feb5f1ab36e in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7feb34004e60, timeout=<optimized out>, context=0x7feb34000c20) at ../../../glib/gmain.c:4346
#2  g_main_context_iterate (context=context@entry=0x7feb34000c20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4042
#3  0x00007feb5f1ab4a3 in g_main_context_iteration (context=0x7feb34000c20, may_block=may_block@entry=1) at ../../../glib/gmain.c:4108
#4  0x00007feb6169a602 in QEventDispatcherGlib::processEvents (this=0x7feb34000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#5  0x00007feb6163e8ab in QEventLoop::exec (this=this@entry=0x7feb527fbbe0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#6  0x00007feb614582c2 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#7  0x00007feb6145945c in QThreadPrivate::start (arg=0x556415c31a30) at thread/qthread_unix.cpp:329
#8  0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7feb4b7fe700 (LWP 8970)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x556415757e78) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x556415757e28, cond=0x556415757e50) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x556415757e50, mutex=0x556415757e28) at pthread_cond_wait.c:647
#3  0x00007feb58956b1b in cnd_wait (mtx=0x556415757e28, cond=0x556415757e50) at ../include/c11/threads_posix.h:155
#4  util_queue_thread_func (input=input@entry=0x556415786290) at ../src/util/u_queue.c:294
#5  0x00007feb5895671b in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7  0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7feb52ffd700 (LWP 8972)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x556415757e78) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x556415757e28, cond=0x556415757e50) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x556415757e50, mutex=0x556415757e28) at pthread_cond_wait.c:647
#3  0x00007feb58956b1b in cnd_wait (mtx=0x556415757e28, cond=0x556415757e50) at ../include/c11/threads_posix.h:155
#4  util_queue_thread_func (input=input@entry=0x5564157d5a50) at ../src/util/u_queue.c:294
#5  0x00007feb5895671b in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7  0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7feb537fe700 (LWP 8971)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x556415757e78) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x556415757e28, cond=0x556415757e50) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x556415757e50, mutex=0x556415757e28) at pthread_cond_wait.c:647
#3  0x00007feb58956b1b in cnd_wait (mtx=0x556415757e28, cond=0x556415757e50) at ../include/c11/threads_posix.h:155
#4  util_queue_thread_func (input=input@entry=0x55641560a370) at ../src/util/u_queue.c:294
#5  0x00007feb5895671b in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7  0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7feb53fff700 (LWP 8969)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x556415757e78) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x556415757e28, cond=0x556415757e50) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x556415757e50, mutex=0x556415757e28) at pthread_cond_wait.c:647
#3  0x00007feb58956b1b in cnd_wait (mtx=0x556415757e28, cond=0x556415757e50) at ../include/c11/threads_posix.h:155
#4  util_queue_thread_func (input=input@entry=0x5564157e3130) at ../src/util/u_queue.c:294
#5  0x00007feb5895671b in impl_thrd_routine (p=<optimized out>) at ../include/c11/threads_posix.h:87
#6  0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7  0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7feb5baef700 (LWP 8968)):
#0  0x00007feb610ccaff in __GI___poll (fds=0x7feb54005240, nfds=3, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007feb5f1ab36e in g_main_context_poll (priority=<optimized out>, n_fds=3, fds=0x7feb54005240, timeout=<optimized out>, context=0x7feb54000c20) at ../../../glib/gmain.c:4346
#2  g_main_context_iterate (context=context@entry=0x7feb54000c20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4042
#3  0x00007feb5f1ab4a3 in g_main_context_iteration (context=0x7feb54000c20, may_block=may_block@entry=1) at ../../../glib/gmain.c:4108
#4  0x00007feb6169a602 in QEventDispatcherGlib::processEvents (this=0x7feb54000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#5  0x00007feb6163e8ab in QEventLoop::exec (this=this@entry=0x7feb5baeebb0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#6  0x00007feb614582c2 in QThread::exec (this=this@entry=0x7feb62773d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#7  0x00007feb626eff4b in QDBusConnectionManager::run (this=0x7feb62773d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#8  0x00007feb6145945c in QThreadPrivate::start (arg=0x7feb62773d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:329
#9  0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#10 0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7feb5c6739c0 (LWP 8967)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x7feb18003f80) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x7feb18003f30, cond=0x7feb18003f58) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x7feb18003f58, mutex=0x7feb18003f30) at pthread_cond_wait.c:647
#3  0x00007feb6145f5cb in QWaitConditionPrivate::wait (deadline=..., this=0x7feb18003f30) at thread/qwaitcondition_unix.cpp:146
#4  QWaitCondition::wait (this=this@entry=0x7feb18003f18, mutex=mutex@entry=0x7feb18003ef8, deadline=...) at thread/qwaitcondition_unix.cpp:225
#5  0x00007feb61459129 in QThread::wait (this=<optimized out>, deadline=...) at ../../include/QtCore/../../src/corelib/thread/qmutex.h:275
#6  0x00007feb4bf9c08d in Kerfuffle::Job::~Job (this=0x7feb18001700, __in_chrg=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qdeadlinetimer.h:68
#7  0x00007feb4bf8d6af in Kerfuffle::AddJob::~AddJob (this=0x7feb18001700, __in_chrg=<optimized out>) at /usr/include/c++/9/bits/atomic_base.h:326
#8  Kerfuffle::AddJob::~AddJob (this=0x7feb18001700, __in_chrg=<optimized out>) at ./kerfuffle/jobs.h:295
#9  0x00007feb4bf9e1e5 in Kerfuffle::CreateJob::~CreateJob (this=0x556416456ea0, __in_chrg=<optimized out>) at /usr/include/c++/9/bits/atomic_base.h:413
#10 0x00007feb4bf9e32d in Kerfuffle::CreateJob::~CreateJob (this=0x556416456ea0, __in_chrg=<optimized out>) at ./kerfuffle/jobs.cpp:455
#11 0x00007feb6166d6e3 in QObject::event (this=0x556416456ea0, e=0x556415e54700) at kernel/qobject.cpp:1301
#12 0x00007feb6211bdc3 in QApplicationPrivate::notify_helper (this=this@entry=0x5564154868d0, receiver=receiver@entry=0x556416456ea0, e=e@entry=0x556415e54700) at kernel/qapplication.cpp:3632
#13 0x00007feb62124bb8 in QApplication::notify (this=0x7ffc3466ea10, receiver=0x556416456ea0, e=0x556415e54700) at kernel/qapplication.cpp:3156
#14 0x00007feb6163fdaa in QCoreApplication::notifyInternal2 (receiver=0x556416456ea0, event=0x556415e54700) at ../../include/QtCore/5.15.3/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#15 0x00007feb616426b1 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x556415460ef0) at kernel/qcoreapplication.cpp:1821
#16 0x00007feb6169afa7 in postEventSourceDispatch (s=0x5564154a1b60) at kernel/qeventdispatcher_glib.cpp:277
#17 0x00007feb5f1ab17d in g_main_dispatch (context=0x5564154a5a30) at ../../../glib/gmain.c:3309
#18 g_main_context_dispatch (context=context@entry=0x5564154a5a30) at ../../../glib/gmain.c:3974
#19 0x00007feb5f1ab400 in g_main_context_iterate (context=context@entry=0x5564154a5a30, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4047
#20 0x00007feb5f1ab4a3 in g_main_context_iteration (context=0x5564154a5a30, may_block=may_block@entry=1) at ../../../glib/gmain.c:4108
#21 0x00007feb6169a602 in QEventDispatcherGlib::processEvents (this=0x5564154a3800, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#22 0x00007feb6163e8ab in QEventLoop::exec (this=this@entry=0x7ffc3466e920, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#23 0x00007feb61646a64 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#24 0x0000556414256313 in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:230

Thread 2 (Thread 0x7feb510e8700 (LWP 8997)):
#0  __GI___libc_read (nbytes=10, buf=0x7feb510e7a1e, fd=30) at ../sysdeps/unix/sysv/linux/read.c:26
#1  __GI___libc_read (fd=fd@entry=30, buf=buf@entry=0x7feb510e7a1e, nbytes=nbytes@entry=10) at ../sysdeps/unix/sysv/linux/read.c:24
#2  0x00007feb5ebdd975 in read (__nbytes=10, __buf=0x7feb510e7a1e, __fd=30) at /usr/include/x86_64-linux-gnu/bits/unistd.h:44
#3  pa_read (fd=30, buf=buf@entry=0x7feb510e7a1e, count=count@entry=10, type=type@entry=0x556415f9ee18) at pulsecore/core-util.c:422
#4  0x00007feb5fbd3416 in clear_wakeup (m=<optimized out>) at pulse/mainloop.c:782
#5  pa_mainloop_prepare (m=m@entry=0x556415f9ed40, timeout=-1) at pulse/mainloop.c:789
#6  0x00007feb5fbd3eb4 in pa_mainloop_iterate (m=0x556415f9ed40, block=<optimized out>, retval=0x0) at pulse/mainloop.c:923
#7  0x00007feb5fbd3f70 in pa_mainloop_run (m=0x556415f9ed40, retval=retval@entry=0x0) at pulse/mainloop.c:945
#8  0x00007feb5fbe211d in thread (userdata=0x556415f9b4d0) at pulse/thread-mainloop.c:101
#9  0x00007feb5ec0c72c in internal_thread_func (userdata=0x556415f43a30) at pulsecore/thread-posix.c:81
#10 0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#11 0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7feb49ffb700 (LWP 14814)):
[KCrash Handler]
#3  0x00007feb519eff1a in LibzipPlugin::addFiles (this=0x5564164c56b0, files=..., destination=0x0, options=..., numberOfEntriesToAdd=<optimized out>) at ./plugins/libzipplugin/libzipplugin.cpp:175
#4  0x00007feb4bf9fd6e in Kerfuffle::AddJob::doWork (this=0x7feb18001700) at ./kerfuffle/jobs.cpp:682
#5  0x00007feb6145945c in QThreadPrivate::start (arg=0x7feb18002ee0) at thread/qthread_unix.cpp:329
#6  0x00007feb5fc28609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7  0x00007feb610d9293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Possible duplicates by query: bug 446692, bug 445527, bug 445334, bug 444861, bug 444687.

Reported using DrKonqi
Comment 1 Tony 2021-12-15 01:54:10 UTC
*** Bug 446927 has been marked as a duplicate of this bug. ***
Comment 2 flan_suse 2021-12-18 16:01:04 UTC
(In reply to Tony from comment #1)
> *** Bug 446927 has been marked as a duplicate of this bug. ***

For what it's worth, I experience the same thing with Ark/Dolphin 21.12, but with 7z (not just zip).
Comment 3 Bug Janitor Service 2022-02-03 09:07:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/93
Comment 4 Nate Graham 2022-02-03 17:25:45 UTC
Fixed by Méven Car with https://invent.kde.org/utilities/ark/-/commit/82c865cb0c0fe68688d5f100143b9f3f8e8007f0 in Ark 21.12.3!
Comment 5 Francis 2022-03-07 00:34:09 UTC
*** Bug 451204 has been marked as a duplicate of this bug. ***