libzipplugin: Prevent crash when canceling archive creation

Usually when canceling zip_close is running and this can't be stopped, while the job may have killed and destroyed the main object.
Then calling list() will crash.

This prevents the crash by checking the cancellation state.

BUG: 446926